--- a/style.css
+++ b/style.css
@@ -4,10 +4,18 @@ input {
 }
 /* csak az adott típusú bev-i mezőre érvényes */
 input[type=submit]{
-    background-color: lightblue;
+    background-color: #add8e6;
+    
 }
 /* az aktuálisan íródó mező tulajdonsága */
 input[type=text]:focus {
     background-color: lightblue;
+}
+input[type=number]{
+    width: 50px;
+}
+
+div{
+    text-align: center;
 }
   
